[package]
name = "phoenix-rs"
version = "0.1.1"
authors = ["Guillaume Bailleul <laibulle@gmail.com>"]
repository = "https://github.com/laibulle/phoenix-rs"
description = "Rust client for Phoenix channels"
license = "MIT"

[dependencies]
websocket = "0.20"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"

[lib]
name = "phoenix"
path = "src/lib.rs"

[[bin]]
name = "phoenix-example"
path = "examples/basic.rs"
