[package]
name = "phoenix"
version = "0.2.2"
authors = [
  "Guillaume Bailleul <laibulle@gmail.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>",
]
repository = "https://github.com/laibulle/phoenix-rs"
description = "Rust client for Phoenix channels"
license = "MIT"
readme="README.md"
keywords = ["phoenix-channels", "websocket", "phoenix", "channels"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]

[dependencies]
env_logger = "0.5"
log = "0.4"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
tokio-core = "0.1"
websocket = "0.20"

[badges]
travis-ci = { repository = "laibulle/phoenix-rs" }

[lib]
name = "phoenix"
path = "src/lib.rs"
